--- a/tests/bluetooth/tester/prj_br.conf
+++ b/tests/bluetooth/tester/prj_br.conf
@@ -4,3 +4,21 @@ CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_SMP=y
 CONFIG_BT_L2CAP_DYNAMIC_CHANNEL=y
 CONFIG_BT_PAGE_TIMEOUT=0xFFFF
+CONFIG_BT_HFP_HF_3WAY_CALL=y
+CONFIG_BT_HFP_AG_3WAY_CALL=y
+CONFIG_BT_HFP_HF_MAX_CALLS=2
+CONFIG_BT_HFP_AG_MAX_CALLS=2
+CONFIG_BT_HFP_AG_VOICE_RECG=y
+CONFIG_BT_HFP_AG_ENH_VOICE_RECG=y
+CONFIG_BT_HFP_HF_ECNR=y
+CONFIG_BT_HFP_AG_VOICE_RECG_TEXT=y
+CONFIG_BT_HFP_AG_CODEC_NEG=y
+CONFIG_BT_HFP_HF_HF_INDICATORS=y
+CONFIG_BT_HFP_HF_CODEC_NEG=y
+CONFIG_BT_HFP_HF_CODEC_MSBC=y
+CONFIG_BT_HFP_HF_CODEC_LC3_SWB=y
+
+CONFIG_BT_CLASSIC=y
+CONFIG_BT_RFCOMM=y
+CONFIG_BT_HFP_HF=y
+CONFIG_BT_HFP_AG=y
