--- a/dts/arm64/nxp/nxp_mimx93_a55.dtsi
+++ b/dts/arm64/nxp/nxp_mimx93_a55.dtsi
@@ -151,6 +151,18 @@
 		status = "disabled";
 	};
 
+	mipi_dsi: dsi@4ae10000 {
+		compatible = "nxp,mipi-dsi-dwc";
+		reg = <0x4ae10000 0x10000>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		interrupts = <GIC_SPI 177 IRQ_TYPE_LEVEL IRQ_DEFAULT_PRIORITY>;
+		interrupt-parent = <&gic>;
+		clocks = <&ccm IMX_CCM_MIPI_PHY_CFG_CLK 0 0>;
+		nxp,dc = <&lcdif>;
+		status = "disabled";
+	};
+
 	gpio1: gpio@47400000 {
 		compatible = "nxp,imx-rgpio";
 		reg = <0x47400000 DT_SIZE_K(64)>;
