--- a/drivers/display/Kconfig
+++ b/drivers/display/Kconfig
@@ -60,6 +60,7 @@ source "drivers/display/Kconfig.nt35510"
 source "drivers/display/Kconfig.renesas_ra"
 source "drivers/display/Kconfig.ili9806e_dsi"
 source "drivers/display/Kconfig.st7701"
+source "drivers/display/Kconfig.waveshare_dsi_lcd"
 source "drivers/display/Kconfig.lpm013m126"
 
 endif # DISPLAY
