--- a/samples/drivers/video/capture/prj.conf
+++ b/samples/drivers/video/capture/prj.conf
@@ -1,8 +1,14 @@
-CONFIG_VIDEO=y
+CONFIG_POLL=y
+CONFIG_EVENTS=y
 CONFIG_SHELL=y
 CONFIG_DEVICE_SHELL=y
+CONFIG_VIDEO=y
+CONFIG_USB_HOST_STACK=y
 CONFIG_PRINTK=y
 CONFIG_LOG=y
 CONFIG_DISPLAY=y
 CONFIG_REQUIRES_FLOAT_PRINTF=y
-CONFIG_LOG_MODE_DEFERRED=y
+CONFIG_DEBUG_OPTIMIZATIONS=y
+CONFIG_USBH_VIDEO_LOG_LEVEL_WRN=y
+CONFIG_VIDEO_FRAME_WIDTH=320
+CONFIG_VIDEO_FRAME_HEIGHT=240
