--- a/samples/drivers/video/capture/sample.yaml
+++ b/samples/drivers/video/capture/sample.yaml
@@ -4,6 +4,7 @@ tests:
   sample.video.capture:
     tags:
       - video
+      - usb
       - shield
       - samples
     extra_args:
@@ -13,9 +14,11 @@ tests:
       - platform:frdm_mcxn947/mcxn947/cpu0:SHIELD="dvp_20pin_ov7670;lcd_par_s035_8080"
       - platform:frdm_mcxn236/mcxn236:SHIELD="dvp_20pin_ov7670;lcd_par_s035_8080"
       - platform:stm32h7b3i_dk:SHIELD="st_b_cams_omv_mb1683"
+      - platform:rd_rw612_bga/rw612:SHIELD="usb_camera;lcd_par_s035_8080"
     extra_configs:
       - CONFIG_TEST=y
       - CONFIG_FPU=y
+      - CONFIG_USB_HOST=y
     harness: console
     harness_config:
       fixture: fixture_camera
@@ -31,15 +34,19 @@ tests:
       - mimxrt1064_evk/mimxrt1064
       - mimxrt1170_evk/mimxrt1176/cm7
       - mimxrt1170_evk@B/mimxrt1176/cm7
+      - rd_rw612_bga/rw612
       - frdm_mcxn947/mcxn947/cpu0
       - frdm_mcxn236/mcxn236
       - mm_swiftio
       - esp32s3_eye/esp32s3/procpu
       - stm32h7b3i_dk
-    depends_on: video
+    depends_on:
+      - video
+      - usbh
     integration_platforms:
       - mimxrt1064_evk/mimxrt1064
       - mimxrt1170_evk/mimxrt1176/cm7
+      - rd_rw612_bga/rw612
   sample.video.capture.shell:
     tags:
       - video
