--- a/dts/bindings/wifi/nxp,wifi.yaml
+++ b/dts/bindings/wifi/nxp,wifi.yaml
@@ -8,3 +8,20 @@ description: |
 compatible: "nxp,wifi"
 
 include: [base.yaml, pinctrl-device.yaml]
+
+properties:
+  pwr-gpios:
+    type: phandle-array
+    description: |
+      Power pin
+      This pin defaults to active high when consumed by the wlan cpu power.
+      The property value should ensure the flags properly describe the signal
+      that is presented to the driver.
+
+  sd-gpios:
+    type: phandle-array
+    description: |
+      SDIO Reset pin
+      This pin defaults to active high when consumed by the SD card. The
+      property value should ensure the flags properly describe the signal
+      that is presented to the driver.
