dts: nxp: imx9: add shmem-cells for scmi shmem
add shmem-cells for scmi shmem in imx943 imx95

Signed-off-by: Yongxu Wang <yongxu.wang@nxp.com>

--- a/dts/arm/nxp/nxp_imx943_m33.dtsi
+++ b/dts/arm/nxp/nxp_imx943_m33.dtsi
@@ -38,6 +38,7 @@
 		scmi_shmem0: memory@44721000 {
 			compatible = "arm,scmi-shmem";
 			reg = <0x44721000 0x80>;
+			#shmem-cells = <0>;
 		};
 	};
 
