boards: mimxrt1170_evk/cm7: Enable PDM/MICFIL
Enable the MICFIL peripheral and two of its channels. Add pinmux
definitions.

Signed-off-by: Vit Stanicek <vit.stanicek@nxp.com>

--- a/boards/nxp/mimxrt1170_evk/mimxrt1170_evk_mimxrt1176_cm7.dts
+++ b/boards/nxp/mimxrt1170_evk/mimxrt1170_evk_mimxrt1176_cm7.dts
@@ -182,6 +182,21 @@ zephyr_udc0: &usb1 {
 	status = "okay";
 };
 
+&dmic {
+	status = "okay";
+
+	pinctrl-0 = <&pinmux_pdm>;
+	pinctrl-names = "default";
+};
+
+&pdmc0 {
+	status = "okay";
+};
+
+&pdmc1 {
+	status = "okay";
+};
+
 nxp_cam_i2c: &lpi2c6 {};
 
 nxp_mipi_csi: &mipi_csi2rx {};
