--- a/boards/nxp/mimxrt1170_evk/mimxrt1170_evk-pinctrl.dtsi
+++ b/boards/nxp/mimxrt1170_evk/mimxrt1170_evk-pinctrl.dtsi
@@ -385,5 +385,17 @@
 		};
 	};
 
+	pinmux_pdm: pinmux_pdm {
+		group0 {
+			pinmux = <&iomuxc_lpsr_gpio_lpsr_08_mic_clk>,
+				<&iomuxc_lpsr_gpio_lpsr_09_mic_bitstream00>, 
+				<&iomuxc_lpsr_gpio_lpsr_10_mic_bitstream01>,
+				<&iomuxc_lpsr_gpio_lpsr_11_mic_bitstream02>,
+				<&iomuxc_lpsr_gpio_lpsr_12_mic_bitstream03>;
+			drive-strength = "high";
+			slew-rate = "fast";
+			input-enable;
+		};
+	};
 };
 
