--- a/samples/drivers/i2s/i2s_codec/boards/mimxrt1170_evk_mimxrt1176_cm7.conf
+++ b/samples/drivers/i2s/i2s_codec/boards/mimxrt1170_evk_mimxrt1176_cm7.conf
@@ -3,8 +3,9 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 #
-
+CONFIG_SAMPLE_FREQ=48000
 CONFIG_DMA_TCD_QUEUE_SIZE=4
-CONFIG_USE_DMIC=n
+CONFIG_USE_DMIC=y
 CONFIG_CODEC_MASTER=n
 CONFIG_I2S_MASTER=y
+CONFIG_DMIC_CHANNELS=2
