--- a/samples/drivers/i2s/i2s_codec/prj.conf
+++ b/samples/drivers/i2s/i2s_codec/prj.conf
@@ -2,3 +2,20 @@ CONFIG_I2S=y
 CONFIG_AUDIO=y
 CONFIG_AUDIO_DMIC=y
 CONFIG_AUDIO_CODEC=y
+CONFIG_NO_OPTIMIZATIONS=y
+CONFIG_MAIN_STACK_SIZE=8192
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=8192
+CONFIG_ISR_STACK_SIZE=8192
+
+CONFIG_DEBUG_THREAD_INFO=y
+
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_SERIAL=y
+CONFIG_UART_CONSOLE=y
+CONFIG_CONSOLE=y
+CONFIG_LOG_BUFFER_SIZE=10240
+
+CONFIG_MPU=n
+CONFIG_ARM_MPU=n
+CONFIG_HW_STACK_PROTECTION=n
