soc: mcxnx4x: Instantiate MICFIL
Add the micfil node to nxp_mcxnx4x_common.dtsi.

Signed-off-by: Vit Stanicek <vit.stanicek@nxp.com>

--- a/dts/arm/nxp/nxp_mcxnx4x_common.dtsi
+++ b/dts/arm/nxp/nxp_mcxnx4x_common.dtsi
@@ -654,6 +654,76 @@
 		#io-channel-cells = <1>;
 	};
 
+	micfil: dmic@10c000 {
+		#address-cells = <1>;
+		#size-cells = <0>;
+		
+		compatible = "nxp,mcux-pdm";
+		reg = <0x10c000 0x1000>;
+
+		interrupts = <48 0>;
+		clocks = <&syscon MCUX_MICFIL_CLK>;
+		dmas = <&edma0 6 18>;
+
+		status = "disabled";
+
+		pdmc0: dmic-channel@0 {
+			reg = <0>;
+			gain = <7>;
+			dc-cutoff = <83>;
+			status = "disabled";
+		};
+
+		pdmc1: dmic-channel@1 {
+			reg = <1>;
+			gain = <7>;
+			dc-cutoff = <83>;
+			status = "disabled";
+		};
+
+		pdmc2: dmic-channel@2 {
+			reg = <2>;
+			gain = <7>;
+			dc-cutoff = <83>;
+			status = "disabled";
+		};
+
+		pdmc3: dmic-channel@3 {
+			reg = <3>;
+			gain = <7>;
+			dc-cutoff = <83>;
+			status = "disabled";
+		};
+
+		pdmc4: dmic-channel@4 {
+			reg = <4>;
+			gain = <7>;
+			dc-cutoff = <83>;
+			status = "disabled";
+		};
+
+		pdmc5: dmic-channel@5 {
+			reg = <5>;
+			gain = <1>;
+			dc-cutoff = <83>;
+			status = "disabled";
+		};
+
+		pdmc6: dmic-channel@6 {
+			reg = <6>;
+			gain = <1>;
+			dc-cutoff = <83>;
+			status = "disabled";
+		};
+
+		pdmc7: dmic-channel@7 {
+			reg = <7>;
+			gain = <1>;
+			dc-cutoff = <83>;
+			status = "disabled";
+		};
+	};
+
 	enet: ethernet@40100000 {
 		compatible = "nxp,enet-qos";
 		reg = <0x40100000 0x1200>;
