boards: mcx_n9xx_evk: Enable MICFIL
Set up the clock tree for the MICFIL/PDM peripheral. Add and link pinmux
definitions.

Signed-off-by: Vit Stanicek <vit.stanicek@nxp.com>

--- a/boards/nxp/mcx_n9xx_evk/mcx_n9xx_evk-pinctrl.dtsi
+++ b/boards/nxp/mcx_n9xx_evk/mcx_n9xx_evk-pinctrl.dtsi
@@ -270,4 +270,14 @@
 			bias-pull-up;
 		};
 	};
+
+	pinmux_micfil_n5xx: pinmux_micfil_n5xx {
+		group0 {
+			pinmux = <PDM0_CLK_PIO0_16>,
+				<PDM0_DATA0_PIO0_17>;
+			slew-rate = "fast";
+			drive-strength = "low";
+			input-enable;
+		};
+	};
 };
