--- a/boards/nxp/mcx_n9xx_evk/mcx_n9xx_evk_mcxn947_cpu0.dtsi
+++ b/boards/nxp/mcx_n9xx_evk/mcx_n9xx_evk_mcxn947_cpu0.dtsi
@@ -241,3 +241,15 @@ zephyr_udc0: &usb1 {
 &sai1 {
 	status = "okay";
 };
+
+&micfil {
+	status = "okay";
+};
+
+&pdmc0 {
+	status = "okay";
+};
+
+&pdmc1 {
+	status = "okay";
+};
