--- a/dts/arm/nxp/nxp_imx95_m7.dtsi
+++ b/dts/arm/nxp/nxp_imx95_m7.dtsi
@@ -508,12 +508,24 @@
 			status = "disabled";
 		};
 
+		lptmr1: timer@44300000 {
+			compatible = "nxp,lptmr";
+			reg = <0x44300000 DT_SIZE_K(4)>;
+			interrupts = <18 0>;
+			clocks = <&scmi_clk IMX95_CLK_LPTMR1>;
+			clock-frequency = <32768>;
+			clk-source = <2>;
+			prescaler = <1>;
+			resolution = <32>;
+			status = "disabled";
+		};
+
 		lptmr2: timer@424d0000 {
 			compatible = "nxp,lptmr";
 			reg = <0x424d0000 DT_SIZE_K(4)>;
 			interrupts = <63 0>;
 			clocks = <&scmi_clk IMX95_CLK_LPTMR2>;
-			clock-frequency = <32000>;
+			clock-frequency = <32768>;
 			clk-source = <2>;
 			prescaler = <1>;
 			resolution = <32>;
