--- a/soc/nxp/mcx/soc.yml
+++ b/soc/nxp/mcx/soc.yml
@@ -22,6 +22,7 @@ family:
   - name: mcxa156
   - name: mcxa346
   - name: mcxa266
+  - name: mcxa366
 - name: mcxw
   socs:
   - name: mcxw716c
@@ -58,6 +59,8 @@ runners:
       - qualifiers:
         - mcxa266
       - qualifiers:
+        - mcxa366
+      - qualifiers:
         - mcxw716c
     '--reset':
     - run: last
@@ -85,5 +88,7 @@ runners:
         - mcxa346
       - qualifiers:
         - mcxa266
+      - qualifiers:
+        - mcxa366
       - qualifiers:
         - mcxw716c
