--- a/soc/nxp/imx/imx9/imx943/Kconfig
+++ b/soc/nxp/imx/imx9/imx943/Kconfig
@@ -22,6 +22,7 @@ config SOC_MIMX94398_M33
 	select HAS_MCUX_XCACHE
 	select INIT_ARCH_HW_AT_BOOT
 	select SOC_EARLY_INIT_HOOK
+	select HAS_PM
 
 config SOC_MIMX94398_M7_0
 	select ARM
@@ -35,6 +36,7 @@ config SOC_MIMX94398_M7_0
 	select SOC_EARLY_INIT_HOOK
 	select HAS_MCUX
 	select HAS_MCUX_CACHE
+	select HAS_PM
 
 config SOC_MIMX94398_M7_1
 	select ARM
@@ -48,3 +50,4 @@ config SOC_MIMX94398_M7_1
 	select SOC_EARLY_INIT_HOOK
 	select HAS_MCUX
 	select HAS_MCUX_CACHE
+	select HAS_PM
