--- a/tests/drivers/gpio/gpio_basic_api/testcase.yaml
+++ b/tests/drivers/gpio/gpio_basic_api/testcase.yaml
@@ -58,6 +58,7 @@ tests:
       - frdm_k64f
     platform_exclude:
       # below boards are customized
+      - frdm_mcxe31b
       - mimxrt595_evk/mimxrt595s/cm33
       - mimxrt1020_evk
       - mimxrt1040_evk
@@ -73,6 +74,7 @@ tests:
       - arduino_gpio
     filter: dt_compat_enabled("test-gpio-basic-api") and dt_compat_enabled("arduino-header-r3")
     platform_allow:
+      - frdm_mcxe31b
       - mimxrt595_evk/mimxrt595s/cm33
       - mimxrt1020_evk
       - mimxrt1040_evk
