--- a/soc/nxp/imxrt/imxrt7xx/cm33/Kconfig
+++ b/soc/nxp/imxrt/imxrt7xx/cm33/Kconfig
@@ -20,6 +20,7 @@ config SOC_MIMXRT798S_CM33_CPU0
 	select INIT_ARCH_HW_AT_BOOT
 	select SOC_RESET_HOOK
 	select SOC_EARLY_INIT_HOOK
+	select HAS_PM
 
 config SOC_MIMXRT798S_CM33_CPU1
 	select CPU_CORTEX_M33
