--- a/dts/arm64/nxp/nxp_mimx93_a55.dtsi
+++ b/dts/arm64/nxp/nxp_mimx93_a55.dtsi
@@ -110,6 +110,12 @@
 		};
 	};
 
+	media_blk_ctrl: mediamix@4ac10000 {
+		compatible = "nxp,imx93-mediamix";
+		reg = <0x4ac10000 0x1000>;
+		status = "disabled";
+	};
+
 	wdog3: watchdog@42490000 {
 		compatible = "nxp,wdog32";
 		reg = <0x42490000 0x1000>;
