driver: mipi dsi: Update dsi dwc driver to support i.MX93 A55
Updated dsi dwc driver and enabled runtime mmio configuration.

Signed-off-by: Ruoshan Shi <ruoshan.shi@nxp.com>
Signed-off-by: Winteri Wang <dongjie.wang@nxp.com>
Signed-off-by: Jiafei Pan <Jiafei.Pan@nxp.com>

--- a/dts/bindings/mipi-dsi/nxp,mipi-dsi-dwc.yaml
+++ b/dts/bindings/mipi-dsi/nxp,mipi-dsi-dwc.yaml
@@ -7,7 +7,7 @@ description: NXP MCUX MIPI DSI DWC
 
 compatible: "nxp,mipi-dsi-dwc"
 
-include: [mipi-dsi-host.yaml, display-controller.yaml]
+include: mipi-dsi-host.yaml
 
 properties:
   interrupts:
